build/log/idf_py_stderr_output_98479
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/idf/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void RespondToDetection(float)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:113:5: error: 'move_servo_to_90_degreese' was not declared in this scope; did you mean 'move_servo_to_90_degrees'?
  113 |     move_servo_to_90_degreese();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     move_servo_to_90_degrees
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
